--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -85,8 +85,12 @@
 .nw-10r{width: 10rem;}
 .nw-10-{width: 10%;}
 .nw-80--f00a{width: 80%; flex: 0 0 auto;}
+.nw-33--a{width: 33%; margin: auto;}
+.nw-33+--a{width: 33.3%; margin: auto;}
+.nw-50--a{width: 50%; margin: auto;}
 .nw-96--a{width: 96%; margin: auto;}
 .nw-98--a{width: 98%; margin: auto;}
+.nw-99--a{width: 99%; margin: auto;}
 .nw-100--a{width: 100%; margin: auto;}
 .nh-100--a{height: 100%; margin: auto;}
 
