--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -85,6 +85,8 @@
 .nw-10r{width: 10rem;}
 .nw-10-{width: 10%;}
 .nw-80--f00a{width: 80%; flex: 0 0 auto;}
+.nw-20--a{width: 20%; margin: auto;}
+.nw-25--a{width: 25%; margin: auto;}
 .nw-33--a{width: 33%; margin: auto;}
 .nw-33+--a{width: 33.3%; margin: auto;}
 .nw-50--a{width: 50%; margin: auto;}
