--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -88,7 +88,7 @@
 .nw-20--a{width: 20%; margin: auto;}
 .nw-25--a{width: 25%; margin: auto;}
 .nw-33--a{width: 33%; margin: auto;}
-.nw-33+--a{width: 33.3%; margin: auto;}
+.nw-33p--a{width: 33.3%; margin: auto;}
 .nw-50--a{width: 50%; margin: auto;}
 .nw-96--a{width: 96%; margin: auto;}
 .nw-98--a{width: 98%; margin: auto;}
